Figured it out!

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
         <h1> Better for our world, better for you.</h1>
 
-        <div class="flip-cards-flexcontainer">
+    <div class="flip-cards-flexcontainer">
 
         <div class="container">
 
@@ -96,7 +96,7 @@
                     <p> We believe in protecting our environment for future generations. We only use 100% recyclable packaging and provide an on-site recycling bay for all waste products. We offer a 5% discount to all customers who cycle, walk or carpool to our food truck.</p>
 
 
-                    <h2> <i class="fa-solid fa-house"></i> Community </h2>
+                    <h2> <i class="fa-solid fa-earth-americas"></i> Community </h2>
                     
                     <p> We source all our ingredients from local suppliers. Our “enabling excellence” initiative offers paid work experience to young people with complex social or medical backgrounds from Co. Donegal. </p>
                     
@@ -111,7 +111,39 @@
     </div>
 
     </section>
+    <section id="menu-main-section">
+        <h3> Please find our set menu options below.</h3>
+        <p> Ensure to ask our friendly staff what in-season specials are available when placing your order as they won't be listed here.</p>
+  
+      <div id="menu-panels">
+  
+  
+<div id="menu-panel-item">
+  <div class="menu-panel-text">
+        <h2> Breakfast </h2>
+        <hr>
+    <div class="list-item">
+        <h3 class="title" > Egg McMuffin</h3>
+        <h3 class="price"> 3.50 </h3>
+        <p> Tofu "eggs", vegan cheese, grilled portobello mushrooms on a lightly toasted bap.</p>
+    </div>
 
+    <div class="list-item">
+        <h3 class="title" > Full Irish</h3>
+        <h3 class="price"> 8.00 </h3>
+        <p> Tofu "eggs", vegan cheese, grilled portobello mushrooms on a lightly toasted bap.</p>
+    </div>
+
+   </div>
+</div>
+  
+      <div id="menu-panel-item"> Menu Panel 2</div>
+  
+      <div id="menu-panel-item"> Menu Panel 3</div>
+  
+  </div>
+  
+  </section>
     <section>
         reviews
     </section>
